Option to define listening IP

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -9,6 +9,8 @@ elk_cluster: false
 elk_group_name: elk
 # pick one initial master to rule them all
 elk_master_host: elk-master.domain.com
+# services will listen on following IP.
+elk_listen_ip: 0.0.0.0
 
 #### Config related variables ####
 # You can override source files paths with your own config files
