--- a/molecule/cluster/molecule.yml
+++ b/molecule/cluster/molecule.yml
@@ -4,14 +4,16 @@ dependency:
 driver:
   name: hetznercloud
 platforms:
-  - name: ${REPO_NAME}-${MOLECULE_IMAGE}-${REF}-node1
+  - name: ${REPO_NAME}-${OS_VERSION}-${REF}-node1
     server_type: cx31
     image: ${MOLECULE_IMAGE}
+    custom_ssh_key_name: molecule.admin
     groups:
       - elk
-  - name: ${REPO_NAME}-${MOLECULE_IMAGE}-${REF}-node2
+  - name: ${REPO_NAME}-${OS_VERSION}-${REF}-node2
     server_type: cx31
     image: ${MOLECULE_IMAGE}
+    custom_ssh_key_name: molecule.admin
     groups:
       - elk
 provisioner:
@@ -21,6 +23,6 @@ provisioner:
       elk:
         elk_cluster: true
         elk_group_name: elk
-        elk_master_host: ${REPO_NAME}-${MOLECULE_IMAGE}-${REF}-node1
+        elk_master_host: ${REPO_NAME}-${OS_VERSION}-${REF}-node1
 verifier:
   name: testinfra
