--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -4,9 +4,10 @@ dependency:
 driver:
   name: hetznercloud
 platforms:
-  - name: ${REPO_NAME}-${MOLECULE_IMAGE}-${REF}
+  - name: ${REPO_NAME}-${OS_VERSION}-${REF}
     server_type: cx31
     image: ${MOLECULE_IMAGE}
+    custom_ssh_key_name: molecule.admin
 provisioner:
   name: ansible
 verifier:
