--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -3,7 +3,7 @@
   hosts: all
   roles:
     - role: veselahouba.docker
-  tasks:
+  pre_tasks:
     - name: Install packages which are usually present
       apt:
         update_cache: true
