--- a/tasks/logstash_cleanup_policy.yml
+++ b/tasks/logstash_cleanup_policy.yml
@@ -1,9 +1,4 @@
 ---
-- name: Slurp cleanup policy
-  slurp:
-    src: "{{ elk_data_dir }}/logstash/index_management/logstash-cleanup.json"
-  register: slurpik
-
 - name: Wait for elasticsearch to start
   wait_for:
     port: 9200
@@ -11,12 +6,22 @@
     timeout: 300
 
 - name: Load cleanup policy
-  failed_when: false
   run_once: true
   uri:
     url: http://localhost:9200/_ilm/policy/logstash-cleanup
     method: PUT
-    body: "{{ slurpik.content|b64decode }}"
+    body: "{{ lookup('file', elk_logstash_conf_dir + '/index_management/logstash-cleanup.json') }}"
+    body_format: json
+    headers:
+      Content-Type: "application/json"
+
+- name: Edit template if already imported without ILM
+  tags: cleanup
+  run_once: true
+  uri:
+    url: http://localhost:9200/_template/logstash
+    method: PUT
+    body: "{{ lookup('file', elk_logstash_conf_dir + '/index_management/logstash.json') }}"
     body_format: json
     headers:
       Content-Type: "application/json"
