--- a/molecule/cluster/molecule.yml
+++ b/molecule/cluster/molecule.yml
@@ -23,6 +23,6 @@ provisioner:
       elk:
         elk_cluster: true
         elk_group_name: elk
-        elk_master_host: ${REPO_NAME}-${OS_VERSION}-${REF}-node1
+        elk_master_hosts: ${REPO_NAME}-${OS_VERSION}-${REF}-node1
 verifier:
   name: testinfra
