--- a/molecule/cluster/molecule.yml
+++ b/molecule/cluster/molecule.yml
@@ -24,5 +24,7 @@ provisioner:
         elk_cluster: true
         elk_group_name: elk
         elk_master_hosts: ${REPO_NAME}-${OS_VERSION}-${REF}-node1
+        elk_kibana_extra_vars:
+          - SERVER_PUBLICBASEURL=http://some.public.url
 verifier:
   name: testinfra
