--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,3 +11,8 @@ galaxy_info:
     - name: Debian
       versions:
         - buster
+        - bullseye
+    - name: Ubuntu
+      versions:
+        - xenial
+        - bionic
